# pinecone-evals

./: .gitignore  CLAUDE.md  PRD.md  README.md  main.py  pyproject.toml
examples/: __init__.py  api_eval_example.py  basic_evaluation.py  compare_approaches.py
pinecone_evals/: __init__.py  cli.py  client.py  evaluator.py  mock.py  models.py  reports.py  utils.py
pinecone_evals/reports/: __init__.py  html.py  markdown.py
pinecone_evals/reports/html_utils/: __init__.py  generate_executive_summary.py  generate_header.py  generate_query_result.py  javascript_utils.py  misc.py
pinecone_evals/reports/templates/: approach_tabs.html  base.html  best_query.html  charts.html  executive_summary.html  javascript.html  query_result.html  report.html
tests/: __init__.py  mock.py  test_client.py  test_evaluator.py  test_models.py
