[project]
name = "pinecone-evals"
version = "0.1.0"
description = "Evaluation client for Pinecone search configurations"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.10.6",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.4",
    "pytest>=7.0.0",
]

[project.scripts]
pinecone-evals = "pinecone_evals.cli:main"

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]