[project]
name = "pinecone-evals"
version = "0.1.0"
description = "Evaluation client for Pinecone search configurations"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pinecone>=5.4.2",
    "pydantic>=2.10.6",
    "requests>=2.25.0",
    "tqdm>=4.64.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.4",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
